test/Fail/Issue7533.err
Issue7533.agda:18.5-12: error: [UnequalTypes]
The type
  Set
is not a subtype of
  X → F A
when checking that the expression F Empty has type X → F A
